# poetry-migration-example

./: Pipfile  pyproject.toml  requirements-primary.txt  requirements.txt
scripts/: 00-install-dependencies.sh  01-migrate-all-to-pyproject.sh
