[tool.poetry]
name = "poetry-migration-example"
version = "0.1.0"
description = ""
authors = ["sathoune <michal5bargiel@gmail.com>"]
readme = "README.md"
packages = [{include = "poetry_migration_example"}]

[tool.poetry.dependencies]
python = "^3.11"
asyncpg = "==0.27.0"
fastapi = "==0.88.0"
pandas = "==1.5.2"
redis = "==4.3.5"
sqlalchemy = "==1.4.44"
uvicorn = "==0.20.0"


[tool.poetry.dev-dependencies]
[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
